# End_to_end_Alzheimer_image_classification

./: .gitignore  README.md  main.py  project_structer.md  pyproject.toml  setup.py
config/: data_config.yaml  model_config.yaml
notebooks/: 1-exploratory-analysis.ipynb
src/data/: __init__.py  augmentation.py  data_loader.py  preprocessing.py
src/evaluation/: __init__.py  eval_visualization.py  metrics.py
src/models/: __init__.py  base_model.py  cnn_models.py  transfer_models.py
src/training/: __init__.py  class_balancing.py  trainer.py
src/utils/: __init__.py  logger.py  visualization.py
