[tool.poetry]
name = "alzheimer-classifier"
version = "0.1.0"
description = "Alzheimer's Detection from MRI images"
authors = ["SKIKRI Hassane <hassaneskikri@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SkikriHassane01/End_to_end_Alzheimer_image_classification"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
numpy = "*"
pandas = "*"
matplotlib = "*"
seaborn = "*"
scikit-learn = "*"
scikit-image = "*"
tensorflow = "*"
keras = "*"
opencv-python = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"